--- a/yf/analyze.Rmd
+++ b/yf/analyze.Rmd
@@ -142,3 +142,61 @@ pwmY <- apply(pfmY, 1, proportion)
 pwmY <- makePWM(pwmY)
 seqLogo(pwmY, yaxis=FALSE)
 ```
+
+Isotype distribution
+```{r, warning=FALSE, message=FALSE}
+rna <- data.frame()
+
+old_rna = c("Abdulain", "Ilgen", "Mamaev", "Smirnov", "Vlasov")
+young_rna = c("Antipyat", "Epifancev", "Hadjibekov", "Koshkin", "Kovalchuk")
+
+for (sample in old_rna){
+  .df <- read.table(paste('data16.11/yf_old_RNA/', sample, ".txt", sep = ""), header=T, sep="\t")
+	.df$proj <- "old"
+	.df$sample <- sample
+	rna <- rbind(rna, .df)
+}
+
+for (sample in young_rna){
+	.df <- read.table(paste('data16.11/yf_young_RNA/', sample, ".txt", sep = ""), header=T, sep="\t")
+	.df$proj <- "young"
+	.df$sample <- sample
+	rna <- rbind(rna, .df)
+}
+
+new_colnames = c('clone.id','clone.count','clone.fraction','clonal.seq','clonal.seq.qual','all.v.hits','all.d.hits',
+	'all.j.hits','all.c.hits','all.v.alignments','all.d.alignments','all.j.alignments','all.c.alignments',
+	'nt.seq.FR1','min.qual.FR1','nt.seq.CDR1','min.qual.CDR1','nt.seq.FR2','min.qual.FR2','nt.seq.CDR2','min.qual.CDR2',
+	'nt.seq.FR3','min.qual.FR3','nt.seq.CDR3','min.qual.CDR3','nt.seq.FR4','min.qual.FR4','aa.seq.FR1','aa.seq.CDR1',
+	'aa.seq.FR2','aa.seq.CDR2','aa.seq.FR3','aa.seq.CDR3','aa.seq.FR4','ref.points', 'proj', 'sample')
+library(stringr)
+colnames(rna) <- new_colnames
+rna <- mutate(rna, isotype = str_sub(all.c.hits, 1, 4))
+
+rna.2 <- ddply(rna, .(proj, sample), summarize,
+             share.IGHA = sum(clone.fraction[which(isotype == "IGHA")]),
+             share.IGHD = sum(clone.fraction[which(isotype == "IGHD")]),
+             share.IGHE = sum(clone.fraction[which(isotype == "IGHE")]),
+             share.IGHG = sum(clone.fraction[which(isotype == "IGHG")]),
+             share.IGHM = sum(clone.fraction[which(isotype == "IGHM")]))
+
+rna.3 <- melt(rna.2, id.vars = c("proj", "sample"))
+ggplot(rna.3, aes(x=proj, group=proj, y=value)) + geom_boxplot() + facet_grid(.~variable, scales="free") + theme_bw()
+```
+
+Network analysis
+```{r, warning=FALSE, message=FALSE, fig.height=2, fig.width=2, fig.show = 'hold'}
+df <- read.table('out2/graph_stats/graph_summary.txt', head=TRUE)
+df.2 <- melt(df, id.vars = c('proj', 'sample'))
+
+ggplot(filter(df.2, variable=='clustering.coeff'), aes(x=proj, group=proj, y=value)) + geom_boxplot() + ggtitle('Clustering coefficient') + theme(plot.title = element_text(size = 10))
+ggplot(filter(df.2, variable=='net.diam'), aes(x=proj, group=proj, y=value)) + geom_boxplot() + ggtitle('Network diameter') + theme(plot.title = element_text(size = 10))
+ggplot(filter(df.2, variable=='shortest.paths'), aes(x=proj, group=proj, y=value)) + geom_boxplot() + ggtitle('Shortest paths') + theme(plot.title = element_text(size = 10))
+```
+
+
+```{r, warning=FALSE, message=FALSE, fig.height=2, fig.width=2, fig.show = 'hold'}
+ggplot(filter(df.2, variable=='char.path.len'), aes(x=proj, group=proj, y=value)) + geom_boxplot() + ggtitle('Characteristic path length') + theme(plot.title = element_text(size = 10))
+ggplot(filter(df.2, variable=='avg.num.neighb'), aes(x=proj, group=proj, y=value)) + geom_boxplot() + ggtitle('Average number of neighbours') + theme(plot.title = element_text(size = 10))
+ggplot(filter(df.2, variable=='n'), aes(x=proj, group=proj, y=value)) + geom_boxplot() + ggtitle('Number of nodes') + theme(plot.title = element_text(size = 10))
+```
