--- a/yf/isotype_and_mutation_burden.Rmd
+++ b/yf/isotype_and_mutation_burden.Rmd
@@ -56,8 +56,8 @@ rna.2 <- ddply(rna, .(proj, sample, isotype), summarize,
 Isotype usage, displays high variance across donors, and, hopefully, in line with the usage observed in plasma B cell subset
 
 ```{r}
-ggplot(rna.2, aes(x=sample, weight=share, fill = isotype)) + 
-  geom_bar() + 
+ggplot(rna.2, aes(x=str_sub(sample,1,3), weight=share, fill = isotype)) + 
+  geom_bar() + xlab("") + ylab("") +
   facet_wrap(~proj, scales = "free_x") + 
   scale_fill_brewer(palette = "Set1") +
   theme_bw()
@@ -89,13 +89,33 @@ summary(a)
 
 More detalization, scaled distributions of hypermutation count per clonotype for old and young. Solid lines - unweighted, dashed lines - weighted by clonotype frequency. Old donors have more hypermutation burden, especially for IGHD.
 
-```{r}
+```{r, message=FALSE, warning=FALSE}
 ggplot(rna, aes(x=shm.count, color = proj)) + 
   geom_density(aes(y=..scaled..), linetype = "solid") + 
   geom_density(aes(weight = clone.fraction, y=..scaled..), linetype = "dashed") + 
   facet_wrap(~isotype) +
-  scale_color_brewer(palette = "Set1") +
+  xlab("Hypermutation burden") + ylab("") +
+  scale_color_brewer("", palette = "Set1") +
   theme_bw()
+```
+
+```{r}
+ggplot(rna, aes(x=clone.id + as.integer(as.factor(rna$proj)) / 2, y=shm.count, color = proj)) + 
+  geom_point(shape=21, size=0.5) +
+  facet_wrap(~isotype, scales="free_y") +
+  xlab("Clone rank") + ylab("Hypermutation burden") +
+  scale_color_brewer("", palette = "Set1") +
+  theme_bw()
+
+library(ggbeeswarm)
+
+ggplot(rna, aes(str_sub(as.character(interaction(proj, sample)),1,7), shm.count, fill = proj)) + 
+  geom_quasirandom(varwidth = TRUE, shape=21, color="black") +
+  facet_wrap(~isotype, scales="free_y") +
+  xlab("") + ylab("Hypermutation burden") +
+  scale_fill_brewer("", palette = "Set1") +
+  theme_bw() +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
 ```
 
 Just a nice pic showing that we are doing everything right - SHM distribution by isotype, IgM having lowest number of SHMs
@@ -107,5 +127,7 @@ ggplot(rna) +
   geom_density(data=rna.3, aes(x=shm.count), fill="grey", linetype="dashed") + 
   geom_density(aes(x=shm.count, color = isotype)) + 
   facet_wrap(~isotype) +
+  xlab("Hypermutation burden") + ylab("") +
+  scale_color_brewer("", palette = "Set1", guide=F) +
   theme_bw()
 ```
