--- a/yf/phyl_analyze.Rmd
+++ b/yf/phyl_analyze.Rmd
@@ -23,7 +23,6 @@ gs <- data.frame()
 
 for (sample in old_rna){
   .df <- read.table(paste('~/yf/trees/stat/yf_old_RNA/', sample, ".txt", sep = ""), header=T, sep="\t")
-  names(.df) <- c('ndn', 'root.freq', 'v', 'j', 'total.freq', 'total.leaves', 'total.nodes', 'root.mutations', 'diameter', 'mean.path', 'total.mutations', 'branching', 'mean.degree')
 	.df$proj <- "old"
 	.df$sample <- sample
 	gs <- rbind(gs, .df)
@@ -31,20 +30,18 @@ for (sample in old_rna){
 
 for (sample in young_rna){
 	.df <- read.table(paste('~/yf/trees/stat/yf_young_RNA/', sample, ".txt", sep = ""), header=T, sep="\t")
-	names(.df) <- c('ndn', 'root.freq', 'v', 'j', 'total.freq', 'total.leaves', 'total.nodes', 'root.mutations', 'diameter', 'mean.path', 'total.mutations', 'branching', 'mean.degree')
 	.df$proj <- "young"
 	.df$sample <- sample
 	gs <- rbind(gs, .df)
 }
 
-gs <- mutate_each(gs, funs(as.double(.)), -ndn, -proj, -sample, -v, -j)
+gs <- mutate_each(gs, funs(as.double(.)), -cdr3nt, -proj, -sample, -single)
 
-gs2 <- gs %>% dplyr::select(-j, -v) %>%
-  melt(id=c('ndn', 'proj', 'sample')) %>% 
+gs2 <- gs %>% melt(id=c('root', 'cdr3nt', 'proj', 'sample')) %>% 
   mutate(name=paste(str_sub(proj, 1, 1), str_sub(sample,1, 3), sep='.')) %>%
   filter(variable != 'total.nodes' & variable != 'mean.path')
   
-first = c('root.freq', 'total.freq', 'total.leaves', 'root.mutations', 'diameter', 'total.mutations', 'mean.degree')
+first = c('freq', 'freq.sum', 'leaves', 'root.mut', 'diameter', 'total.mut', 'mean.degree')
 
 ggplot(filter(gs2, variable %in% first)) + geom_quasirandom(aes(x = name, y = value, group=proj, fill = proj), varwidth = TRUE, shape=21, color="black") +
 facet_wrap(~variable, nrow=4, scales='free') +
@@ -56,21 +53,14 @@ theme(axis.text.x = element_text(angle = 45, hjust = 1))
 
 ```{r, fig.height=9}
 for (i in first){
-  cat(i, 't-Test p-value\n', t.test(gs[[i]] ~ gs[['proj']])$p.value*nrow(gs), '\n')
+  cat(i, 't-Test p-value\n', p.adjust(t.test(gs[[i]] ~ gs[['proj']])$p.value, method="bonferroni"), '\n')
 }
 ```
 
 
-```{r}
-ggplot(filter(gs2, variable == 'branching')) + geom_quasirandom(aes(x = name, y = log(value), group=proj, fill = proj), varwidth = TRUE, shape=21, color="black") +
-scale_fill_brewer("", palette = "Set1") +
-theme_bw() +
-theme(axis.text.x = element_text(angle = 45, hjust = 1))
-```
-
 
 ```{r, warning=FALSE, message=FALSE, fig.height=3, fig.width=3, fig.show = 'hold'}
-gs3 <- gs2 %>% dplyr::group_by(sample, proj) %>% summarise(n = n())
+gs3 <- gs2 %>% dplyr::group_by(sample, proj) %>% dplyr::summarise(n = n())
 ggplot(gs3) + geom_boxplot(aes(x = proj, y = n)) + ggtitle('Total number of clonal families')
 
 t.test(n ~ proj, gs3)
@@ -78,48 +68,30 @@ t.test(n ~ proj, gs3)
 
 
 ```{r, warning=FALSE, message=FALSE, fig.height=3, fig.width=3, fig.show = 'hold'}
-gs4 <- gs %>% mutate(single = ifelse(total.leaves == 0, 'singleton', 'tree')) %>%
-  dplyr::group_by(sample, proj, single) %>% summarise(n = n()) %>%
+gs4 <- gs %>% mutate(single = ifelse(single==TRUE, 'single', 'tree')) %>% 
+  dplyr::group_by(sample, proj, single) %>% dplyr::summarise(n = n()) %>%
   dcast(sample + proj ~ single)
-ggplot(gs4, aes(x=proj, y = singleton/tree)) + geom_boxplot() + ggtitle('Single clones number to clonal trees number')
+ggplot(gs4, aes(x=proj, y = single/tree)) + geom_boxplot() + ggtitle('Single clones number to clonal trees number')
 
-t.test(singleton/tree ~ proj, gs4)
+t.test(single/tree ~ proj, gs4)
 ```
 
 
 ```{r, warning=FALSE, message=FALSE, fig.height=3, fig.width=3, fig.show = 'hold'}
-gs4.1 <- gs %>% mutate(single = ifelse(total.leaves == 0, 'singleton', 'tree')) %>%
-  dplyr::group_by(sample, proj, single) %>% summarise(n = sum(total.freq)) %>%
+gs4.1 <- gs %>% mutate(single = ifelse(single==TRUE, 'single', 'tree')) %>% 
+  dplyr::group_by(sample, proj, single) %>% dplyr::summarise(n = sum(freq.sum)) %>%
   dcast(sample + proj ~ single)
-ggplot(gs4.1, aes(x=proj, y = singleton/tree)) + geom_boxplot() + ggtitle('Single clones total frequency to clonal trees total frequency')
+ggplot(gs4.1, aes(x=proj, y = single/tree)) + geom_boxplot() + ggtitle('Single clones total frequency to clonal trees total frequency')
 
-t.test(singleton/tree ~ proj, gs4.1)
+t.test(single/tree ~ proj, gs4.1)
 ```
 
 
 ```{r}
-gs4.2 <- gs %>% mutate(single = ifelse(total.leaves == 0, 'singleton', 'tree')) %>%
-  mutate(name=paste(str_sub(proj, 1, 1), str_sub(sample,1, 3), sep='.'))
-ggplot(gs4.2, aes(x = single, y = root.mutations, fill=proj)) + geom_boxplot() + ggtitle('SHM number in root') +
+gs4.2 <- gs %>% mutate(name=paste(str_sub(proj, 1, 1), str_sub(sample,1, 3), sep='.'))
+ggplot(gs4.2, aes(x = single, y = root.mut, fill=proj)) + geom_boxplot() + ggtitle('SHM number in root') +
 theme(axis.text.x = element_text(angle = 45, hjust = 1))
 
-a <- aov(root.mutations ~ single * proj, gs4.2)
+a <- aov(root.mut~ single * proj, gs4.2)
 summary(a)
 ```
-
-
-```{r, eval=FALSE, fig.height=15}
-gs5 <- gs %>% dplyr::group_by(sample, proj, v, j) %>% summarise(total.freq = sum(total.freq))
-
-ggplot(filter(gs5, proj=='old'), aes(x = v, y = j, size=total.freq)) + geom_point() +
-facet_wrap(~sample, ncol=1, scales='free') +
-theme(axis.text.x = element_text(angle = 45, hjust = 1))
-```
-
-
-```{r, eval=FALSE, fig.height=15}
-ggplot(filter(gs5, proj=='young'), aes(x = v, y = j, size=total.freq)) + geom_point() +
-facet_wrap(~sample, ncol=1, scales='free') +
-theme(axis.text.x = element_text(angle = 45, hjust = 1))
-```
-
